# scraping-with-rust

./: .gitignore  Cargo.toml  enclosures  hrefs.txt  mps3.txt  raw.txt
src/: feed.txt  grab_all_links.rs  main.rs  scraper_stories.rs
