[package]
name = "nightscrape"
version = "0.1.0"
authors = ["Christopher Brown <cb@skeptomai.com>"]

[dependencies]
log = "*"
env_logger = "*"
reqwest = "*"
select = "*"
scraper = "*"
prettytable-rs = "*"
openssl-sys = "0.9.39"
openssl="0.10"
feed-rs="0.1.3"
atom_syndication="*"
tempfile="3.0.1"
num_cpus="*"
scoped_threadpool="*"
cssparser="0.27"